cabal-version:      3.0
name:               haskeys
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/chuzrm1415/haskeys.git
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jesus
maintainer:         jesus.rojasm.1415@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskeys
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
