cabal-version:      3.0
name:               haskeys
version:            0.1.0.0
homepage:           https://github.com/chuzrm1415/haskeys.git
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jesus
maintainer:         jesus.rojasm.1415@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  exposed-modules:     Auth
  hs-source-dirs:      src
  build-depends:       base ^>=4.18.3.0,
                       cryptonite, bytestring, binary, containers,
                       base16-bytestring, directory
  default-language:    Haskell2010

executable haskeys
  import:              warnings
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base ^>=4.18.3.0,
                       haskeys,
                       cryptonite, bytestring, binary, containers
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/chuzrm1415/haskeys.git
